--- a/README
+++ b/README
@@ -10,20 +10,21 @@ Simple way to control and modify the source code of disksim.
     * 註: 安裝gcc後，編譯出現錯誤 fatal error: sys/types.h: No such file or directory
     
 ## 編譯
-    * cd [src](/src)
+    * cd src
     * make clean
     * make
     
 ## 執行
     * sudo ./lmssim '/home/merukoo/Disksim_lms/ssdmodel/valid/Intel_toolkit.parv' ssd_output '/home/merukoo/Disksim_lms/ssdmodel/valid/maxtor146g/maxtor146g.parv' hdd_output
-    * ./lmssim //執行檔
-    * '/home/merukoo/Disksim_lms/ssdmodel/valid/Intel_toolkit.parv' //SSD參數
-    * ssd_output  //可隨意取名
-    * '/home/merukoo/Disksim_lms/ssdmodel/valid/maxtor146g/maxtor146g.parv' //HDD參數
-    * hdd_output
+    * 參數含意
+        * ./lmssim 執行檔
+        * '/home/merukoo/Disksim_lms/ssdmodel/valid/Intel_toolkit.parv' //SSD參數
+        * ssd_output  隨意取
+        * '/home/merukoo/Disksim_lms/ssdmodel/valid/maxtor146g/maxtor146g.parv' //HDD參數
+        * hdd_output  隨意取
     
 ## 主要修改的地方
-    * cd [lmssim.c](/src/lmssim.c)
+    * cd [lmssim.c](src/lmssim.c)
     
 
 
